--- a/package.json
+++ b/package.json
@@ -8,12 +8,35 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.3",
+    "expo-asset": "~8.2.1",
+    "expo-constants": "~9.3.3",
+    "expo-facebook": "~9.1.0",
+    "expo-notifications": "~0.8.2",
     "expo-status-bar": "~1.0.3",
+    "geo2zip": "^2.0.2",
+    "lodash": "^4.17.21",
+    "qs": "^6.10.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-elements": "^3.3.2",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-maps": "^0.27.1",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "react-navigation-tabs": "^2.11.0",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
